crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@395.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE plt2_adv_p2_2 PARTITION OF plt2_adv FOR VALUES IN ('0006');"
---
CreateStmt@0..72
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "plt2_adv_p2_2"
  Whitespace@26..27 " "
  Partition@27..36 "PARTITION"
  Whitespace@36..37 " "
  Of@37..39 "OF"
  Whitespace@39..40 " "
  RangeVar@40..48
    Ident@40..48 "plt2_adv"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..70
    InP@60..62 "IN"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..70
      Sconst@64..70 "'0006'"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

