crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@408.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO plt1_adv SELECT i, i, to_char(i % 10, 'FM0000') FROM generate_series(1, 299) i WHERE i % 10 IN (1, 3);"
---
InsertStmt@0..114
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "plt1_adv"
  Whitespace@20..21 " "
  SelectStmt@21..112
    Select@21..27 "SELECT"
    Whitespace@27..28 " "
    ResTarget@28..29
      ColumnRef@28..29
        Ident@28..29 "i"
    Ascii44@29..30 ","
    Whitespace@30..31 " "
    ResTarget@31..32
      ColumnRef@31..32
        Ident@31..32 "i"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    ResTarget@34..58
      FuncCall@34..58
        Ident@34..41 "to_char"
        Ascii40@41..42 "("
        AExpr@42..48
          ColumnRef@42..43
            Ident@42..43 "i"
          Whitespace@43..44 " "
          Ascii37@44..45 "%"
          Whitespace@45..46 " "
          AConst@46..48
            Iconst@46..48 "10"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..58
          Sconst@50..58 "'FM0000'"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    From@60..64 "FROM"
    Whitespace@64..65 " "
    RangeFunction@65..90
      List@65..87
        FuncCall@65..87
          Ident@65..80 "generate_series"
          Ascii40@80..81 "("
          AConst@81..82
            Iconst@81..82 "1"
          Ascii44@82..83 ","
          Whitespace@83..84 " "
          AConst@84..87
            Iconst@84..87 "299"
      Ascii41@87..88 ")"
      Whitespace@88..89 " "
      Alias@89..90
        Ident@89..90 "i"
    Whitespace@90..91 " "
    Where@91..96 "WHERE"
    Whitespace@96..97 " "
    AExpr@97..112
      AExpr@97..103
        ColumnRef@97..98
          Ident@97..98 "i"
        Whitespace@98..99 " "
        Ascii37@99..100 "%"
        Whitespace@100..101 " "
        AConst@101..103
          Iconst@101..103 "10"
      Whitespace@103..104 " "
      InP@104..106 "IN"
      Whitespace@106..107 " "
      Ascii40@107..108 "("
      List@108..112
        AConst@108..109
          Iconst@108..109 "1"
        Ascii44@109..110 ","
        Whitespace@110..111 " "
        AConst@111..112
          Iconst@111..112 "3"
  Ascii41@112..113 ")"
  Ascii59@113..114 ";"

