crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_hashjoin TO false;
---
VariableSetStmt@0..29
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..19 "enable_hashjoin"
  Whitespace@19..20 " "
  To@20..22 "TO"
  Whitespace@22..23 " "
  AConst@23..28
    FalseP@23..28 "false"
  Ascii59@28..29 ";"

